--- a/src/app/container/product-list/filter/filter.component.html
+++ b/src/app/container/product-list/filter/filter.component.html
@@ -1,12 +1,30 @@
 <div class="filter-container">
     <span>Filter: </span>
 
-    <input type="radio" name="filter" value="All" />
+    <input 
+        type="radio" 
+        name="filter" 
+        value="all" 
+        [(ngModel)]= "selectedFilterRadioButton" 
+        (change)="onselectedFilterRadioButtonChanged()"
+     />
     <span>{{'All('+all+')'}}</span>
 
-    <input type="radio" name="filter" value="true" />
+    <input 
+        type="radio" 
+        name="filter" 
+        value="true" 
+        [(ngModel)]= "selectedFilterRadioButton" 
+        (change)="onselectedFilterRadioButtonChanged()" 
+    />
     <span>{{'In stock('+inStock+')'}}</span>
 
-    <input type="radio" name="filter" value="false" />
+    <input 
+        type="radio" 
+        name="filter" 
+        value="false" 
+        [(ngModel)]= "selectedFilterRadioButton" 
+        (change)="onselectedFilterRadioButtonChanged()" 
+    />
     <span>{{'Out of stock('+outOfstock+')'}}</span>
 </div>
