--- a/src/app/container/product-list/product-list.component.html
+++ b/src/app/container/product-list/product-list.component.html
@@ -1,7 +1,11 @@
 <app-filter 
     [all]="totalProductCount" 
     [inStock]="totalProductInStock"
-    [outOfstock]="totalProductOutOfStock"></app-filter>
+    [outOfstock]="totalProductOutOfStock"
+    (selectedFilterRadioButtonChanged)="onFilterChanged($event)">
+</app-filter>
 <div class="ekart--products--container">
-    <app-product *ngFor="let prod of products" [product]="prod"></app-product>
+    <div *ngFor="let prod of products">
+        <app-product  [product]="prod" *ngIf=" selectedFilterRadioButton ==='all' || prod.is_in_inventory.toString() ===  selectedFilterRadioButton" ></app-product>
+    </div>
 </div>
