--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -10,9 +10,9 @@
     <button (click)="incrementCartValue()">+</button>
     <input (input)="onNameChange($event)"><br>
     <p>name={{name}}</p> -->
-    <app-search></app-search>
+    <app-search (searchTextChange)="setSearchText($event)"></app-search>
     <!--<div *ngFor="let item of listOfString">
         <p>Current element of array is:{{item}}</p>
     </div>-->
-    <product-list></product-list>
+    <product-list [searchText]="searchText"></product-list>
 </div>
