--- a/src/app/container/product-list/product-list.component.html
+++ b/src/app/container/product-list/product-list.component.html
@@ -5,7 +5,9 @@
     (selectedFilterRadioButtonChanged)="onFilterChanged($event)">
 </app-filter>
 <div class="ekart--products--container">
+    <!-- *ngIf=" selectedFilterRadioButton ==='all' || prod.is_in_inventory.toString() ===  selectedFilterRadioButton" -->
     <div *ngFor="let prod of products">
-        <app-product  [product]="prod" *ngIf=" selectedFilterRadioButton ==='all' || prod.is_in_inventory.toString() ===  selectedFilterRadioButton" ></app-product>
+        <app-product  [product]="prod" *ngIf=" searchText ==='' || prod.name.toLowerCase().includes(searchText)"></app-product>
+        <!-- if is empty string we will show all the prod else we will show only the reserach name contain the searchText-->
     </div>
 </div>
