--- a/src/app/container/product-list/product-list.component.html
+++ b/src/app/container/product-list/product-list.component.html
@@ -6,7 +6,7 @@
 </app-filter>
 <div class="ekart--products--container">
     <!-- *ngIf=" selectedFilterRadioButton ==='all' || prod.is_in_inventory.toString() ===  selectedFilterRadioButton" -->
-    <div *ngFor="let prod of products">
+    <div *ngFor="let prod of products" (click)="selectedProduct=prod">
         <app-product  [product]="prod" *ngIf=" searchText ==='' || prod.name.toLowerCase().includes(searchText)"></app-product>
         <!-- if is empty string we will show all the prod else we will show only the reserach name contain the searchText-->
     </div>
